--- a/nginx-site.conf
+++ b/nginx-site.conf
@@ -3,6 +3,7 @@ server {
 
     charset utf-8;
     client_max_body_size 100M;
+    large_client_header_buffers 4 512k;
 
     root    /var/www/html/public;
     index   index.php;
@@ -18,6 +19,8 @@ server {
         fastcgi_pass 127.0.0.1:9000;
         fastcgi_index index.php;
         include fastcgi.conf;
+        fastcgi_buffers 16 512k;
+        fastcgi_buffer_size 64k;
+        fastcgi_busy_buffers_size 512k;
     }
 }
-
